--- a/public/_assets/scss/layouts/_page.scss
+++ b/public/_assets/scss/layouts/_page.scss
@@ -2,15 +2,18 @@
 @use "../abstracts/mixins" as *;
 
 .page {
+    max-height: 100%;
+
     &_simple {
         display: flex;
 
         flex-direction: column;
-        row-gap: var(--spacing-125);
-        justify-content: center;
+        gap: var(--spacing-125);
+        // justify-content: center;
+        margin: auto;
 
         max-width: var(--measure-max);
-        min-height: 0;
+        // min-height: 0;
     }
 
     @include for-viewport-size(phone) {
